--- a/src/main/resources/templates/appointDesigner.html
+++ b/src/main/resources/templates/appointDesigner.html
@@ -24,7 +24,7 @@
 
 
 <main>
-    <div class="container">
+    <div class="container pb-5">
         <div class="container-fluid p-2">
             <form class="border border-secondary rounded-3 p-5">
 
@@ -132,7 +132,7 @@
 </main>
 
 <!--footer-->
-<footer th:replace="layout/Footer :: mainFooter"></footer>
+<footer th:replace="layout/SubFooter :: #subfooter "></footer>
 
 </body>
 </html>
