--- a/src/main/resources/templates/review/shopReviewTable.html
+++ b/src/main/resources/templates/review/shopReviewTable.html
@@ -31,9 +31,9 @@
                     <thead class="table-dark">
                     <tr>
                         <th>No.</th>
-                        <th colspan="3">Title</th>
-                        <th>Writer</th>
-                        <th>Date</th>
+                        <th colspan="3">제목</th>
+                        <th>작성자</th>
+                        <th>작성날짜</th>
 <!--                        <th>Like</th>-->
                     </tr>
                     </thead>
@@ -57,7 +57,7 @@
 </main>
 
 
-<footer th:replace="layout/Footer :: mainFooter"></footer>
+<footer th:replace="layout/SubFooter :: #subfooter "></footer>
 
 </body>
 
