--- a/src/main/resources/templates/review/shopReviewWriter.html
+++ b/src/main/resources/templates/review/shopReviewWriter.html
@@ -69,7 +69,7 @@
 </main>
 
 
-<footer th:replace="layout/Footer :: mainFooter"></footer>
+<footer th:replace="layout/SubFooter :: #subfooter "></footer>
 
 </body>
 
