--- a/src/main/resources/static/assets/sass/layout/_footer.scss
+++ b/src/main/resources/static/assets/sass/layout/_footer.scss
@@ -21,7 +21,7 @@
 			letter-spacing: _font(letter-spacing);
 			font-size: 0.6rem;
 			opacity: 0.75;
-			margin-bottom: 0;
+			//margin-bottom: 0;
 			text-transform: uppercase;
 		}
 
