--- a/src/main/resources/templates/appointList.html
+++ b/src/main/resources/templates/appointList.html
@@ -51,7 +51,7 @@
 
                             <div class="row g-3 p-3">
                                 <div class="col-4">
-                                    <label for="userName" class="col-sm-3 col-form-label">Time</label>
+                                    <label for="userName" class="col-sm-3 col-form-label">예약 시간</label>
                                 </div>
                                 <!--  회원 이름 / 텍스트 뷰 라벨 -->
                                 <div class="col-8">
@@ -64,7 +64,7 @@
 
                         <div class="row g-3 p-3">
                             <div class="col-4">
-                                <label for="userId" class="col-sm-3 col-form-label">cut </label>
+                                <label for="userId" class="col-sm-3 col-form-label"> 헤어 컷 </label>
                             </div>
                             <!--  회원 이름 / 텍스트 뷰 라벨 -->
                             <div class="col-8">
@@ -77,7 +77,7 @@
 
                         <div class="row g-3 p-3">
                             <div class="col-4">
-                                <label for="userPw" class="col-sm-3 col-form-label">perm</label>
+                                <label for="userPw" class="col-sm-3 col-form-label">파마</label>
                             </div>
                             <!--  회원 Pw / 텍스트 뷰 라벨 -->
                             <div class="col-8">
@@ -90,7 +90,7 @@
 
                         <div class="row g-3 p-3">
                             <div class="col-4">
-                                <label for="userPh" class="col-sm-3 col-form-label">color</label>
+                                <label for="userPh" class="col-sm-3 col-form-label">염색</label>
                             </div>
                             <!--  회원 phone / 텍스트 뷰 라벨 -->
                             <div class="col-8">
@@ -99,22 +99,11 @@
                         </div>
 
 
-                        <!-- 회원정보 Email  -->
-
-                        <div class="row g-3 p-3">
-                            <div class="col-4">
-                                <label for="userMail" class="col-sm-3 col-form-label">clinic</label>
-                            </div>
-                            <!--  회원 Email / 텍스트 뷰 라벨 -->
-                            <div class="col-8">
-                                <input id="userMail" class="form-control" type="email" value="clinic" readonly>
-                            </div>
-                        </div>
 
 
                         <div class="row g-3 p-3">
                             <div class="col-4">
-                                <label for="dis" class="col-sm-3 col-form-label">designer</label>
+                                <label for="dis" class="col-sm-3 col-form-label">디자이너</label>
                             </div>
                             <!--  회원 phone / 텍스트 뷰 라벨 -->
                             <div class="col-8">
@@ -130,7 +119,7 @@
 </main>
 
 <!--footer-->
-<footer th:replace="layout/Footer :: mainFooter"></footer>
+<footer th:replace="layout/SubFooter :: #subfooter "></footer>
 
 </body>
 </html>
