--- a/src/main/resources/templates/layout/Footer.html
+++ b/src/main/resources/templates/layout/Footer.html
@@ -12,7 +12,10 @@
 <body>
 
 <footer th:fragment="mainFooter" id="footer" class="text-center">
-    <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+    <div class="container p-4">
+        <p class="copyright">&copy; Promise Hair & 1 team  & BootStrap 5 template Design : <a href="https://html5up.net">HTML5 UP</a>. </p>
+    </div>
+
 </footer>
 
 </body>
