--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,6 +10,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
     </noscript>
@@ -39,6 +42,16 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
             })
         }
     </script>
+    <style>
+        .swal-button {
+            padding: 0px 15px;
+            border-radius: 2px;
+            background-color: #1f5052;
+            font-size: 10px;
+            border: 1px solid rgba(62, 84, 154, 0.13);
+            text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+        }
+    </style>
 </head>
 
 
@@ -64,7 +77,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <article th:replace="layout/ShopArticle :: #Shop"></article>
 
 <!--        <article th:replace="layout/AgentArticle :: #Agent"></article>-->
-
         <!-- About -->
         <article th:replace="layout/AboutArticle :: #About"></article>
 
@@ -90,6 +102,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
+
 
 </body>
 </html>
