--- a/src/main/resources/templates/myPageOwner.html
+++ b/src/main/resources/templates/myPageOwner.html
@@ -23,7 +23,7 @@
 
 
 <main>
-    <div class="container">
+    <div class="container pb-5">
         <div class="container-fluid">
             <form class="border border-secondary rounded-3 p-5">
 
@@ -101,7 +101,7 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userPh" class="col-sm-3 col-form-label">Phone</label>
+                                        <label for="userPh" class="col-sm-3 col-form-label">연락처</label>
                                     </div>
                                     <!--  회원 phone / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
@@ -114,7 +114,7 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userMail" class="col-sm-3 col-form-label">Phone</label>
+                                        <label for="userMail" class="col-sm-3 col-form-label">E-mail</label>
                                     </div>
                                     <!--  회원 Email / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
@@ -133,7 +133,7 @@
                 </section>
 
                 <section>
-                    ddd
+
                 </section>
             </form>
         </div>
@@ -141,7 +141,6 @@
 
 </main>
 <!--footer-->
-<footer th:replace="layout/Footer :: mainFooter"></footer>
-
+<footer th:replace="layout/SubFooter :: #subfooter "></footer>
 </body>
 </html>
