--- a/src/main/resources/templates/myPageShopUpdate.html
+++ b/src/main/resources/templates/myPageShopUpdate.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <main>
-    <div class="container">
+    <div class="container pb-5">
         <div class="container-fluid">
             <form action="/shopUpdate" class="border border-secondary rounded-3 p-5">
                 <div class="p-5">
@@ -105,7 +105,7 @@
                                         <label for="shopAddrRoad" class="col-form-label">신주소</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="shopAddrRoad" name="shopAddrRoad"class="form-control" type="text"
+                                        <input id="shopAddrRoad" name="shopAddrRoad" class="form-control" type="text"
                                                th:value="${session.shop.shopAddrRoad}" value="신주소" readonly>
                                     </div>
                                 </div>
@@ -199,6 +199,8 @@
             </form>
         </div>
     </div>
+
 </main>
+<footer th:replace="layout/SubFooter :: #subfooter "></footer>
 </body>
 </html>
