--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -43,7 +43,7 @@
 
 
 <main>
-    <div class="container">
+    <div class="container pb-5">
         <div class="container-fluid">
             <form class="border border-secondary rounded-3 p-5">
 
@@ -238,7 +238,7 @@
 </main>
 
 <!--footer-->
-<footer th:replace="layout/Footer :: mainFooter"></footer>
+<footer th:replace="layout/SubFooter :: #subfooter "></footer>
 
 </body>
 </html>
