--- a/src/main/resources/templates/myPageUserUpdate.html
+++ b/src/main/resources/templates/myPageUserUpdate.html
@@ -31,7 +31,7 @@
 </header>
 
 <main>
-  <div class="container">
+  <div class="container pb-5">
     <div class="container-fluid">
       <form class="border border-secondary rounded-3 p-5" id="frm" action="/userUpdate">
 
@@ -126,7 +126,7 @@
 
 
 <!--footer-->
-<footer th:replace="layout/Footer :: mainFooter"></footer>
+<footer th:replace="layout/SubFooter :: #subfooter "></footer>
 
 </body>
 </html>
