_디자인 추가 + 수정 할 이미지 남음

--- a/src/main/resources/templates/appointDesigner.html
+++ b/src/main/resources/templates/appointDesigner.html
@@ -9,16 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/imagecss.css">
 </head>
 
 <body>
 <!-- 회원가입 영역부터는 템플릿 사용 x bootstrap 사용 디자인은 기능 중간 집계 이후 고칠 예정-->
 
-<header class="container mt-3 py-5">
-    <div class="container-fluid p-4 bg-light bg-gradient">
-        <div class="container p-5 rounded">
-            <h1 class="display-5 text-center fw-semibold text-muted">Choose Your Designer!</h1>
-        </div>
+<header class="container mb-2 p-0">
+    <div class="container m-0">
+        <span class="image main"><img src="images/pic_03.jpg" alt=""/></span>
     </div>
 </header>
 
