--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -32,15 +32,16 @@
 
     <!--    값 확인-->
     <script type="text/javascript" src="useJs/apoint.js"></script>
+<!--    이미지 box-->
+    <link rel="stylesheet" href="assets/css/imagecss.css">
     <!--  --------------------------------------------------------------------->
+
+    <!--    유효성 검사 / image -->
     <style>
         ul {
             list-style: none;
             padding-left: 0px;
         }
-    </style>
-    <!--    유효성 검사-->
-    <style>
         span {
             display: none;
             color: red;
@@ -48,27 +49,25 @@
     </style>
 </head>
 
-<body>
+<body class="align-center">
 
 <!--예약 페이지도 마찬가지로 template x -->
 
-<header class="container mt-3">
-    <div class="container-fluid bg-light bg-gradient">
-        <div class="container rounded">
-            <h1 class="display-5 text-center fw-semibold text-muted">예약 페이지</h1>
+<header class="container mb-2 p-0">
+        <div class="container m-0">
+            <span class="image main"><img src="images/pic_03.jpg" alt=""/></span>
         </div>
-    </div>
 </header>
 
 
 <main>
-    <div class="container pb-5">
+    <div class="container">
         <div class="container-fluid">
             <form class="border border-secondary rounded-3 p-1" action="/insertAppointment" method="post">
                 <div class="p-5">
                     <!-- 예약 날짜 / 시간 (javascript & css 같이 사용) -->
                     <div class="p-3">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                             원하는 날짜, 시간을 선택해 주세요.
                         </div>
                         <div>
@@ -78,17 +77,14 @@
                                         <form autocomplete="off">
                                             <div class="card-header">
                                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1">
-                                                    <input type="text" onclick="checkDate()" onchange="checkDate()"
-                                                           id="dp1" class="datepicker"
-                                                           placeholder="날짜를 선택해 주세요" name="apointDate" readonly><span
+                                                    <input type="text" onclick="checkDate()" onchange="checkDate()" id="dp1" class="datepicker" placeholder="날짜를 선택해 주세요" name="apointDate" readonly><span
                                                         class="fa fa-calendar"></span>
                                                     <!--값 뜨는곳-->
                                                     <span class="date">원하는 날짜를 선택해 주세요</span>
-                                                    <input type="text" class="datepicker" id="dp2"
-                                                           placeholder="시간을 선택해 주세요" name="Time" disabled="true">
+                                                    <input type="text" class="datepicker" id="dp2" placeholder="시간을 선택해 주세요" name="Time" disabled="true">
                                                     <!--값 뜨는곳-->
                                                     <span class="time">원하는 시간을 선택해 주세요</span>
-                                                    <!--                                                    dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
+                                                    <!--                                                   dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
                                                     <input hidden type="text" id="apointTime" name="apointTime">
                                                 </div>
                                             </div>
@@ -183,7 +179,7 @@
                     <!--                    메뉴 선택 -->
                     <!-- cut 번호 101~ -->
                     <div class="p-2">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                             헤어 컷
                         </div>
                         <div class="form-floating mb-3">
@@ -203,7 +199,7 @@
 
                     <!-- Perm 번호 201~-->
                     <div class="p-2">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                             펌
                         </div>
                         <div class="form-floating mb-3">
@@ -223,7 +219,7 @@
                     </div>
                     <!-- Color 301~-->
                     <div class="p-2">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                             염색
                         </div>
                         <div class="form-floating mb-3">
@@ -263,7 +259,8 @@
 
 
 <!--footer-->
-<footer th:replace="layout/SubFooter :: #subfooter "></footer>
+<footer th:replace="layout/Footer :: #footer "></footer>
+<!-- 캘린더로 인해 sub footer 이상해서 메인 footer로 바꿔뒀습니다. -->
 
 </body>
 </html>
