--- a/src/main/resources/templates/myPageShopUpdate.html
+++ b/src/main/resources/templates/myPageShopUpdate.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="assets/css/imagecss.css">
     <script>
         $(document).ready(function () {
             $("#btn-back").on("click", function () {
@@ -13,6 +14,8 @@
             });
         });
     </script>
+
+
 </head>
 <body>
 <main>
