--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/imagecss.css">
     <!--    <script>-->
     <!--        $(document).r-->
     <!--    </script>-->
@@ -33,11 +34,9 @@
 <body>
 <!-- 회원가입 영역부터는 템플릿 사용 x bootstrap 사용 디자인은 기능 중간 집계 이후 고칠 예정-->
 
-<header class="container mt-3 py-5">
-    <div class="container-fluid p-4 bg-light bg-gradient">
-        <div class="container p-5 rounded">
-            <h1 class="display-5 text-center fw-semibold text-muted"></h1>
-        </div>
+<header class="container mb-2 p-0">
+    <div class="container m-0">
+        <span class="image main"><img src="images/pic_03.jpg" alt=""/></span>
     </div>
 </header>
 
@@ -70,7 +69,7 @@
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
                             <!--  회원정보 타이틀 -->
-                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                                 회원정보
                             </div>
 
@@ -79,11 +78,11 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userName" class="col-sm-3 col-form-label">이름</label>
+                                        <label for="userName" class="col-form-label fw-bold">이름</label>
                                     </div>
                                     <!--  회원 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userName" class="form-control" type="text" value="이름 보여질 곳" th:value="${session.user.userName}" readonly>
+                                        <input id="userName" class="form-control" type="text" th:value="${session.user.userName}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -92,11 +91,11 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userId" class="col-sm-3 col-form-label">ID</label>
+                                        <label for="userId" class="col-form-label fw-bold">아이디</label>
                                     </div>
                                     <!--  회원 아이디 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userId" class="form-control" type="text" value="ID 보여질 곳" th:value="${session.user.userId}" readonly>
+                                        <input id="userId" class="form-control" type="text" th:value="${session.user.userId}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -105,11 +104,11 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userPw" class="col-sm-3 col-form-label">PW</label>
+                                        <label for="userPw" class="col-form-label fw-bold">패스워드</label>
                                     </div>
                                     <!--  회원 Pw / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" value="PW 보여질 곳" readonly>
+                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -118,7 +117,7 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userPh" class="col-sm-3 col-form-label">Phone</label>
+                                        <label for="userPh" class="col-form-label fw-bold">연락처</label>
                                     </div>
                                     <!--  회원 phone / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
@@ -131,11 +130,11 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userMail" class="col-sm-3 col-form-label">Phone</label>
+                                        <label for="userMail" class="col-form-label fw-bold">Email</label>
                                     </div>
                                     <!--  회원 Email / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" value="email 보여질 곳" readonly>
+                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -155,12 +154,12 @@
 
                     <div class="tab-content" id="nav-apoint-tabContent">
                         <div class="tab-pane fade show" id="nav-apoint" role="tabpanel" aria-labelledby="nav-apoint-tab" tabinde>
-                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                                 예약 내역
                             </div>
                             <table th:if="${session.apoints} != null" class="table">
                                 <thead class="table-dark">
-                                <tr>
+                                <tr class="fw-bold">
                                     <th>지점</th>
                                     <th>디자이너</th>
                                     <th>컷</th>
