--- a/src/main/resources/templates/myPageUserUpdate.html
+++ b/src/main/resources/templates/myPageUserUpdate.html
@@ -9,6 +9,7 @@
           integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
           crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="assets/css/imagecss.css">
 
   <script>
     $(document).ready(function () {
@@ -21,13 +22,11 @@
 
 <body>
 <!-- 회원가입 영역부터는 템플릿 사용 x bootstrap 사용 디자인은 기능 중간 집계 이후 고칠 예정-->
-
-<header class="container mt-3 py-5">
-  <div class="container-fluid p-4 bg-light bg-gradient">
-    <div class="container p-5 rounded">
-      <h1 class="display-5 text-center fw-semibold text-muted"></h1>
-    </div>
+<header class="container mb-2 p-0">
+  <div class="container m-0">
+    <span class="image main"><img src="images/pic_03.jpg" alt=""/></span>
   </div>
+</header>
 </header>
 
 <main>
@@ -40,7 +39,7 @@
           <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
               <!--  회원정보 타이틀 -->
-              <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+              <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                 회원정보
               </div>
 
@@ -48,7 +47,7 @@
               <div class="text-center">
                 <div class="row g-3 p-3">
                   <div class="col-2">
-                    <label for="userName" class="col-sm-3 col-form-label">이름</label>
+                    <label for="userName" class="col-sm-3 col-form-label fw-bold">이름</label>
                   </div>
                   <!--  회원 이름 / 텍스트 뷰 라벨 -->
                   <div class="col-10">
@@ -61,7 +60,7 @@
               <div class="text-center">
                 <div class="row g-3 p-3">
                   <div class="col-2">
-                    <label for="userId" class="col-sm-3 col-form-label">ID</label>
+                    <label for="userId" class="col-sm-3 col-form-label fw-bold">아이디</label>
                   </div>
                   <!--  회원 아이디 / 텍스트 뷰 라벨 -->
                   <div class="col-10">
@@ -74,7 +73,7 @@
               <div class="text-center">
                 <div class="row g-3 p-3">
                   <div class="col-2">
-                    <label for="userPw" class="col-sm-3 col-form-label">PW</label>
+                    <label for="userPw" class="col-sm-3 col-form-label fw-bold">패스워드</label>
                   </div>
                   <!--  회원 Pw / 텍스트 뷰 라벨 -->
                   <div class="col-10">
@@ -87,7 +86,7 @@
               <div class="text-center">
                 <div class="row g-3 p-3">
                   <div class="col-2">
-                    <label for="userPh" class="col-sm-3 col-form-label">Phone</label>
+                    <label for="userPh" class="col-sm-3 col-form-label fw-bold">연락처</label>
                   </div>
                   <!--  회원 phone / 텍스트 뷰 라벨 -->
                   <div class="col-10">
@@ -100,7 +99,7 @@
               <div class="text-center">
                 <div class="row g-3 p-3">
                   <div class="col-2">
-                    <label for="userMail" class="col-sm-3 col-form-label">Email</label>
+                    <label for="userMail" class="col-sm-3 col-form-label fw-bold">Email</label>
                   </div>
                   <!--  회원 Email / 텍스트 뷰 라벨 -->
                   <div class="col-10">
