--- a/src/main/resources/templates/signUpOwner.html
+++ b/src/main/resources/templates/signUpOwner.html
@@ -14,6 +14,7 @@
             integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
             crossorigin="anonymous"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <link rel="stylesheet" href="assets/css/imagecss.css">
 
     <style>
         span {
@@ -38,11 +39,9 @@
 <body>
 <!-- 회원가입 영역부터는 템플릿 사용 x bootstrap 사용-->
 
-<header class="container mt-3 py-5">
-    <div class="container-fluid p-4 bg-light bg-gradient">
-        <div class="container p-5 rounded">
-            <h1 class="display-5 text-center fw-semibold text-muted">Sign Up</h1>
-        </div>
+<header class="container mb-2 p-0">
+    <div class="container m-0">
+        <span class="image main"><img src="images/pic_03.jpg" alt=""/></span>
     </div>
 </header>
 
@@ -53,7 +52,7 @@
             <form action="/signOwner" class="border border-secondary rounded-3 p-5" method="post">
                 <!-- ID -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         아이디
                     </div>
                     <div class="form-floating mb-3">
@@ -69,7 +68,7 @@
 
                 <!-- PW -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         비밀번호
                     </div>
                     <div class="form-floating mb-3">
@@ -85,7 +84,7 @@
 
                 <!-- PW2 -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         비밀번호 확인
                     </div>
                     <div class="form-floating mb-3">
@@ -101,7 +100,7 @@
 
                 <!-- 상호명 -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         Shop 이름
                     </div>
                     <div class="form-floating mb-3">
@@ -114,7 +113,7 @@
 
                 <!-- 주소 -->
                 <div class="row mb-3 mx-auto">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         Shop 주소
                     </div>
                     <div class="row align-items-center p-2">
@@ -159,7 +158,7 @@
 
                 <!-- Shop Tel -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         Shop 번호
                     </div>
                     <div class="form-floating mb-3">
@@ -175,7 +174,7 @@
 
                 <!-- Owner Name -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         사용하실 이름
                     </div>
                     <div class="form-floating mb-3">
@@ -188,7 +187,7 @@
 
                 <!-- Phone -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         연락처
                     </div>
                     <div class="form-floating mb-3">
@@ -203,7 +202,7 @@
                 </div>
                 <!-- mail -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         Email
                     </div>
                     <div class="form-floating mb-3">
@@ -240,7 +239,7 @@
                 <!--                %>-->
                 <!-- gender -->
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         성별
                     </div>
                     <div class="p-3 pb-2 mb-4">
@@ -257,7 +256,7 @@
                 </div>
 
                 <div class="p-2">
-                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
                         사업자 등록번호
                     </div>
                     <div class="form-floating mb-3">
