--- a/src/main/resources/templates/myPageShop.html
+++ b/src/main/resources/templates/myPageShop.html
@@ -27,7 +27,7 @@
 <!-- 회원가입 영역부터는 템플릿 사용 x bootstrap 사용 디자인은 기능 중간 집계 이후 고칠 예정-->
 <header class="container mb-2 p-0">
     <div class="container m-0">
-        <span class="image main"><img src="images/pic_03.jpg" alt=""/></span>
+        <span class="image main"><img src="images/pic_mypage.jpg" alt=""/></span>
     </div>
 </header>
 
