--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -36,7 +36,7 @@
 
 <header class="container mb-2 p-0">
     <div class="container m-0">
-        <span class="image main"><img src="images/pic_03.jpg" alt=""/></span>
+        <span class="image main"><img src="images/pic_mypageuser.jpg" alt=""/></span>
     </div>
 </header>
 
