--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -55,7 +55,7 @@
 
 <header class="container mb-2 p-0">
         <div class="container m-0">
-            <span class="image main"><img src="images/pic_03.jpg" alt=""/></span>
+            <span class="image main"><img src="images/pic_appointment.jpg" alt=""/></span>
         </div>
 </header>
 
@@ -63,7 +63,7 @@
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form class="border border-secondary rounded-3 p-1" action="/insertAppointment" method="post">
+            <form class="border border-secondary rounded-3" action="/insertAppointment" method="post">
                 <div class="p-5">
                     <!-- 예약 날짜 / 시간 (javascript & css 같이 사용) -->
                     <div class="p-3">
